Fix bug 222875. Wikipedia applet was not loading the css due to a QtWebkit regression Now we give the css encoded on a base64 to hte QWebPage, and the css is loaded on kde 4.4 Please test this on other version (4.3 or 4.5) Simon

BUG: 222875