src/context/applets/wikipedia/WikipediaApplet.cpp
@@ -43,6 +43,7 @@
 #include <QMenu>
 #include <QWebHistory>
 #include <QWebPage>
+#include <QWebFrame>
 
 
 WikipediaApplet::WikipediaApplet( QObject* parent, const QVariantList& args )
@@ -473,10 +474,16 @@ WikipediaApplet::paletteChanged( const QPalette & palette )
         {
             m_css->write( contents.toLatin1() );
 
-            QString filename = m_css->fileName();
+            // NOTE shall we keep this commented out, and bring it back later or the base64 is just what we need ?
+            //   QString filename = m_css->fileName();
             m_css->close(); // flush buffer to disk
-            debug() << "set user stylesheet to:" << "file://" + filename;
-            m_webView->page()->settings()->setUserStyleSheetUrl( "file://" + filename );
+            //   debug() << "set user stylesheet to:" << "file://" + filename;
+            //   m_webView->page()->settings()->setUserStyleSheetUrl( "file://" + filename );
+
+
+            //NOTE  We give it encoded on a base64
+            // as it is currently broken on QtWebkit (see https://bugs.webkit.org/show_bug.cgi?id=34884 )
+            m_webView->mainFrame()->page()->settings()->setUserStyleSheetUrl( QUrl( QString( "data:text/css;charset=utf-8;base64," + QString( QByteArray( contents.toLatin1() ).toBase64().data() ) ) ) );
         }
     }
 }
